objects/TASKRAY__trBoardFilterShareJunction__c.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__trBoardFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Filter</label>
        <referenceTo>TASKRAY__trBoardFilter__c</referenceTo>
        <relationshipName>trBoardFilter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBoardPowerFilter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Filter</label>
        <referenceTo>TASKRAY__trBoardPowerFilter__c</referenceTo>
        <relationshipName>trBoardPowerFilter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trGroupId__c</fullName>
        <description>The Id for a salesforce group, unfortunately lookup relationships to groups are not available</description>
        <externalId>true</externalId>
        <label>GroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trIsEnhancedFilterShare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that a Share is use by enhanced Filtering.</description>
        <label>Is Enhanced Filter Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStandardBoardFilter__c</fullName>
        <label>Standard Board Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trStandardBoardPowerFilter__c</fullName>
        <label>Standard Power Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trUniqueIdentifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TASKRAY__trUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BoardFilterShares</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TaskRay Filter Share</label>
    <listViews>
        <fullName>TASKRAY__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TaskRay Filter Share Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Filter Shares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>